# Horyzen-Flow-download

./: .gitignore  AUDIT_REPORT.md  README.md  build-server.js  index.html  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
.github/workflows/: publish.yml
flow-data/.flow/: analytics.json  graph.json  search-index.json  server-log.txt  settings.json
src/: App.tsx  index.css  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AnalyticsDashboard.tsx  Editor.tsx  ErrorBoundary.tsx  Settings.tsx  ShortcutPalette.tsx  Sidebar.tsx  StatusBar.tsx
src/context/: ThemeContext.tsx
src/lib/: analytics.ts  cm-spellcheck.ts  search-index.ts  spellcheck.ts  storage.ts  templates.ts  themes.ts  utils.ts
