[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.0.3"

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# These versions are pinned to the stable 2.2.0+ releases
tauri-plugin-fs = "2.2.0"
tauri-plugin-path = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-updater = "2.2.0"
tauri-plugin-log = "2.2.0"